deploy/previews/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-pr-${PR_NUMBER}
  labels:
    app.kubernetes.io/name: website-preview
    app.kubernetes.io/instance: pr-${PR_NUMBER}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx-public
  rules:
  - host: pr-${PR_NUMBER}.${PREVIEW_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: website-pr-${PR_NUMBER}
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - pr-${PR_NUMBER}.${PREVIEW_DOMAIN}
      secretName: pr-${PR_NUMBER}-${PREVIEW_DOMAIN}-tls
